# siphon-refactor

./: .envrc  .gitignore  README.md  pyproject.toml
docs/: refactor.md  testing_guide.md
siphon-api/: pyproject.toml
siphon-api/src/siphon_api/: __main__.py  audio.py  enums.py  errors.py  file_types.py  interfaces.py  metadata.py  models.py
siphon-api/src/siphon_api/api/: from_siphon_request.py  siphon_request.py  siphon_response.py  to_siphon_request.py
siphon-client/: pyproject.toml
siphon-client/src/siphon_client/: __main__.py  cli.py  client.py  example.py
siphon-client/src/siphon_client/cli/: cli.py  old_cli.py  siphon_cli.py
siphon-client/src/siphon_client/client/: create_siphon_request.py
siphon-client/src/siphon_client/collections/: collection.py
siphon-client/src/siphon_client/examples/: example.csv  example.html  example.json  example.md  example.toml  example.txt  example.xml  example.yaml  generate_examples.py
siphon-server/: .envrc  context_window.py  pyproject.toml
siphon-server/dev/: scaffold.py
siphon-server/dev/templates/: enricher_template.txt  extractor_template.txt  test_conftest_template.txt
siphon-server/docs/: testing_guide.md
siphon-server/src/siphon_server/: __main__.py  config.py
siphon-server/src/siphon_server/core/: count_tokens.py  pipeline.py
siphon-server/src/siphon_server/database/: cache.py  postgres.py  tree.md
siphon-server/src/siphon_server/database/postgres/: connection.py  converters.py  models.py  repository.py  setup.py
siphon-server/src/siphon_server/scaffolding/: scaffold.py
siphon-server/src/siphon_server/scaffolding/templates/: init_template.txt  parser_template.txt  test_template.txt
siphon-server/src/siphon_server/server/: app.py
siphon-server/src/siphon_server/sources/: registry.py
siphon-server/src/siphon_server/sources/article/: __init__.py  cache.py  enricher.py  extractor.py  metadata.py  parser.py
siphon-server/src/siphon_server/sources/article/prompts/: article_description.jinja2  article_summary.jinja2
siphon-server/src/siphon_server/sources/audio/: __init__.py  audio_pipeline.py  diarize.py  enricher.py  example.py  extractor.py  parser.py  todo.md  transcribe.py
siphon-server/src/siphon_server/sources/audio/pipeline/: audio_pipeline.py  combine.py  diarize.py  format.py  preprocess.py  transcribe.py
siphon-server/src/siphon_server/sources/audio/prompts/: audio_description.jinja2  audio_summary.jinja2  title.jinja2
siphon-server/src/siphon_server/sources/doc/: __init__.py  enricher.py  extractor.py  file_context.py  parser.py
siphon-server/src/siphon_server/sources/doc/prompts/: code_description.jinja2  code_summary.jinja2  data_description.jinja2  data_summary.jinja2  presentation_description.jinja2  presentation_summary.jinja2  prose_description.jinja2  prose_summary.jinja2
siphon-server/src/siphon_server/sources/drive/: __init__.py  enricher.py  extractor.py  notes.md  parser.py
siphon-server/src/siphon_server/sources/drive/pipeline/: drive_discovery.py  drive_get.py  drive_metadata.py  drive_service.py  drive_type.py  notes.md  retrieve_doc.py  test.py
siphon-server/src/siphon_server/sources/email/: gmail_checkpoint.json  imap.py
siphon-server/src/siphon_server/sources/email/gmail_ingest/: 1762876430_19a739fa75fb906a.json  1762877144_19a73aa8cec4ce4b.json  1762877349_19a73adb7bd010ca.json
siphon-server/src/siphon_server/sources/youtube/: :w  __init__.py  cache.py  conduit  download_youtube_transcript.py  enricher.py  extractor.py  format_youtube.py  get_video_id.py  metadata.py  notes.md  parser.py  retrieve_youtube.py
siphon-server/src/siphon_server/sources/youtube/prompts/: description.jinja2  summary.jinja2
siphon-server/src/siphon_server/workers/: docker-compose.yml  flux_imagegen.py  hidream_client.py  port_manifest.md  zimage_client.py
siphon-server/src/siphon_server/workers/diarization-cpu/: Dockerfile  diarize.py  launcher.py  main.py
siphon-server/src/siphon_server/workers/diarization_cpu/: docker-compose.yml  launcher.py
siphon-server/src/siphon_server/workers/flux_imagegen/: Dockerfile  docker-compose.yml  launcher.py  main.py  requirements.txt
siphon-server/src/siphon_server/workers/hidream_imagegen/: Dockerfile  docker-compose.yml  launcher.py  main.py
siphon-server/src/siphon_server/workers/zimage_imagegen/: Dockerfile  docker-compose.yaml  launcher.py  main.py
siphon-server/tests/article/: conftest.py  test_article.py
siphon-server/tests/audio/: conftest.py  test_audio.py
siphon-server/tests/doc/: conftest.py  test_doc.py
siphon-server/tests/drive/: conftest.py  test_drive.py
siphon-server/tests/youtube/: conftest.py  test_youtube.py
