[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "siphon_api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic"
]

[tool.hatch.build.targets.wheel]
packages = ["src/siphon_api"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/siphon_api/py.typed"]
