[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "siphon_client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "siphon-api",
    "httpx",
    "click>=8.3.0",
    "pytest-watch>=4.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/siphon_client"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/siphon_client/py.typed"]

[tool.uv.sources]
siphon_api = { path = "../siphon-api", editable = true }
