[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "siphon_client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "headwater-client",
    "httpx",
    "pytest-watch>=4.2.0",
    "siphon-api",
]

[tool.hatch.build.targets.wheel]
packages = ["src/siphon_client"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/siphon_client/py.typed"]

[tool.uv.sources]
siphon_api = { path = "../siphon-api", editable = true }
headwater_client = { path = "../../headwater/headwater-client", editable = true }
