[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "siphon_server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.0",
    "rich>=14.2.0",
    "siphon_api",
    "youtube-transcript-api>=1.2.3",
    "yt-dlp>=2025.08.01",
]

[tool.hatch.build.targets.wheel]
packages = ["src/siphon_server"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/siphon_server/py.typed"]

[tool.uv.sources]
siphon_api = { path = "../siphon-api", editable = true }

[dependency-groups]
dev = [
    "pytest-watcher>=0.4.3",
]
